[project]
name = "agentic-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=2.3.0,<3.0.0)",
    "anthropic (>=0.69.0,<0.70.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
